Changed kaf plainget endpoint to be invoked as GET

--- a/Tokenizer-Base-Service/src/main/resources/index.html
+++ b/Tokenizer-Base-Service/src/main/resources/index.html
@@ -55,7 +55,7 @@
     </li>
 </ul>
         <p></p>
-        <p>For Language Resource Switchboard we added three GET endpoints</p>
+        <p>For Language Resource Switchboard we added three additional endpoints</p>
         <p>The endpoints are the following:</p>
         <ul>
             <li><code>wl/tokenizer/plainget</code> (use it to tokenize plain texts and produce a TCF valid document)</li>
