--- a/OpeNerServices/OpeNerServiceWrapper/src/main/resources/tokenizer.html
+++ b/OpeNerServices/OpeNerServiceWrapper/src/main/resources/tokenizer.html
@@ -21,7 +21,6 @@ and open the template in the editor.
             in different formats and returns the result in different formats as well.
             <br> According to the input data:
             <pre>{
-                    "file":"input_file",
                     "language":"one_of_the_above_in_either_2_or_3_codes",
                     "iformat":"raw_or_kaf", 
                     "oformat":"one_of_the_above"}
@@ -57,13 +56,13 @@ and open the template in the editor.
             <p></p>
             <p></p>
             <p></p>
-            curl -H 'Content-Type: application/json' --data '{"file":"/tmp/riccardo.txt","language":"it","iformat":"raw","oformat":"tab"}' http://localhost:8080/openerservice/tokenizer/runservice
+            curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.tcf' -F 'form='{"language":"it","iformat":"raw","oformat":"tab"}' http://localhost:8080/openerservice/tokenizer/runservice
 
             <p>POST endpoints are the following:</p>
             <ul>
                 <li><code>openerservice/tokenizer/runservice</code> (POST service to analyze plain and to produce  TCF, TAB, KAF valid documents, according to the input and output format parameters)</li>
                 <li><code>openerservice/tokenizer/tcf/runservice</code> (POST service to analyze TCF documents and to produce  TCF, TAB, KAF valid documents, according to the input and output format parameters)</li>
-                <li><code>openerservice/tokenizer/kaf/runservice</code> (POST service to analyze KAF documents and to produce  TCF, TAB, KAF valid documents, according to the input and output format parameters)</li>
+                <li><code>openerservice/tokenizer/runservice***</code> (POST service to analyze KAF (with raw element) documents and to produce  TCF, TAB, KAF valid documents, according to the input and output format parameters)</li>
 
             </ul>
             <p>Similarly GET endpoints have been set up for eventual integration into <a href="https://www.clarin.eu/content/language-resource-switchboard" target="_blank">LRS</a></p>
@@ -95,29 +94,29 @@ and open the template in the editor.
             <ol>
                 <li>
                     <ul>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"raw","oformat":"tab"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"raw","oformat":"tcf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"raw","oformat":"kaf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
+                        <li><code> curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile' -F 'form='{"language":"it","iformat":"raw","oformat":"tab"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
+                        <li><code> curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile' -F 'form='{"language":"it","iformat":"raw","oformat":"tcf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
+                        <li><code> curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile' -F 'form='{"language":"it","iformat":"raw","oformat":"kaf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
                     </ul>
                 </li>
                 <li>
                     <ul>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"raw","oformat":"tab"}' -X POST <span class="url"></span>openerservice/tokenizer/tcf/runservice</code></li>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"raw","oformat":"tcf"}' -X POST <span class="url"></span>openerservice/tokenizer/tcf/runservice</code></li>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"raw","oformat":"kaf"}' -X POST <span class="url"></span>openerservice/tokenizer/tcf/runservice</code></li>
+                        <li><code> curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.tcf' -F 'form='{"language":"it","iformat":"raw","oformat":"tab"}' -X POST <span class="url"></span>openerservice/tokenizer/tcf/runservice</code></li>
+                        <li><code> curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.tcf' -F 'form='{"language":"it","iformat":"raw","oformat":"tcf"}' -X POST <span class="url"></span>openerservice/tokenizer/tcf/runservice</code></li>
+                        <li><code> curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.tcf' -F 'form='{"language":"it","iformat":"raw","oformat":"kaf"}' -X POST <span class="url"></span>openerservice/tokenizer/tcf/runservice</code></li>
                     </ul>
                 </li>
                 <li>
                     <ul>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"kaf","oformat":"tab"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"kaf","oformat":"tcf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
-                        <li><code> curl -H 'Content-Type: application/json' --data '{"file":"/tmp/myfile","language":"it","iformat":"kaf","oformat":"kaf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
+                        <li><code>*** curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.kaf' -F 'form='{"language":"it","iformat":"kaf","oformat":"tab"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
+                        <li><code>*** curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.kaf' -F 'form='{"language":"it","iformat":"kaf","oformat":"tcf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
+                        <li><code>*** curl -H 'Content-Type: multipart/form-data' -F 'file=@myfile.kaf' -F 'form='{"language":"it","iformat":"kaf","oformat":"kaf"}' -X POST <span class="url"></span>openerservice/tokenizer/runservice</code></li>
                     </ul>
                 </li>
             </ol>
 
 
-            <p>WGET</p> wget --header 'Content-Type: application/json' --post-data
+<!--            <p>WGET</p> wget --header 'Content-Type: application/json' --post-data
             Similarly, using wget:
             <ol>
                 <li>
@@ -143,7 +142,7 @@ and open the template in the editor.
                 </li>
             </ol>
 
-
+-->
 
             <p></p>
 
@@ -169,23 +168,23 @@ and open the template in the editor.
             <ol>
                 <li>
                     <ul>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/lrs?format=tab&amp;lang=ita&amp;url=my_url&quot;</li>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/lrs?format=kaf&amp;lang=ita&amp;url=my_url&quot;</li>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/lrs?format=tcf&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/lrs?format=tab&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/lrs?format=kaf&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/lrs?format=tcf&amp;lang=ita&amp;url=my_url&quot;</li>
                     </ul>
                 </li>
                 <li>
                     <ul>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/tcf/lrs?format=tab&amp;lang=ita&amp;url=my_url&quot;</li>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/tcf/lrs?format=kaf&amp;lang=ita&amp;url=my_url&quot;</li>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/tcf/lrs?format=tcf&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/tcf/lrs?format=tab&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/tcf/lrs?format=kaf&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/tcf/lrs?format=tcf&amp;lang=ita&amp;url=my_url&quot;</li>
                     </ul>
                 </li>
                 <li>
                     <ul>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/kaf/lrs?format=tab&amp;lang=ita&amp;url=my_url&quot;</li>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/kaf/lrs?format=kaf&amp;lang=ita&amp;url=my_url&quot;</li>
-                        <li>curl -X GET &quot;<span class="url"></span>/openerservice/tokenizer/kaf/lrs?format=tcf&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/kaf/lrs?format=tab&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/kaf/lrs?format=kaf&amp;lang=ita&amp;url=my_url&quot;</li>
+                        <li>curl -X GET &quot;<span class="url"></span>openerservice/tokenizer/kaf/lrs?format=tcf&amp;lang=ita&amp;url=my_url&quot;</li>
                     </ul>
                 </li>
             </ol>
@@ -235,8 +234,11 @@ and open the template in the editor.
     &lt;/D-Spin&gt;
             </pre>
 
-            <p>As for KAF text you can use <pre>
-            
+            <p>As for KAF text you can use for *** <pre>
+&lt;KAF xml:lang=&quot;it&quot; version=&quot;1.0&quot;&gt;&lt;raw&gt;Questo è un testo italiano&lt;/raw&gt;&lt;/KAF&gt;
+            </pre>
+        
+            <p>or the following for **<pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot; standalone=&quot;yes&quot;?&gt;
 &lt;KAF xml:lang=&quot;it&quot; version=&quot;1.0&quot;&gt;
 	&lt;kafHeader&gt;
@@ -261,6 +263,7 @@ and open the template in the editor.
         <ul>
             <li><b>*</b> means that the text is really in plain text, such as I am a student. Thi smeans that no kaf tags are allowed.</li>
             <li><b>**</b> means that the text is fully kaffed as in the example above. The &lt;raw&gt; element is not allowed.</li>
+            <li><b>***</b> means that the text is  kaffed with the &lt;raw&gt; element only.</li>
         </ul>
         <h2>Contacts</h2>
         In case of problems write an email 
