changed tokenizer html

--- a/OpeNerServices/OpeNerServiceWrapper/src/main/resources/tokenizer.html
+++ b/OpeNerServices/OpeNerServiceWrapper/src/main/resources/tokenizer.html
@@ -258,7 +258,8 @@ and open the template in the editor.
 	&lt;/text&gt;
 &lt;/KAF&gt;
 
-            </pre></div>
+            </pre>
+            <p> As URL you may use: <pre>https://raw.githubusercontent.com/clarin-eric/LRS-Hackathon/master/samples/resources/txt/hermes-it.txt</pre></div>
         Please note that:
         <ul>
             <li><b>*</b> means that the text is really in plain text, such as I am a student. Thi smeans that no kaf tags are allowed.</li>
