changed readme html

--- a/PanaceaServices/PanaceaServicesWrapper/src/main/resources/index.html
+++ b/PanaceaServices/PanaceaServicesWrapper/src/main/resources/index.html
@@ -218,6 +218,8 @@
 &lt;/KAF&gt;
 
         </pre>
+                   <p> As URL you may use: <pre>https://raw.githubusercontent.com/clarin-eric/LRS-Hackathon/master/samples/resources/txt/hermes-it.txt</pre></div>
+
 
         <h2>Contacts</h2>
         In case of problems write an email 
